force-app/main/default/objects/Lead/fields/ActiveCamp__Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Last_Synced__c</fullName>
    <label>ActiveCampaign Last Synced</label>
    <type>DateTime</type>
</CustomField>