force-app/main/default/objects/Lead/fields/Agent_Business__c.field-meta.xml
<CustomField>
    <fullName>Agent_Business__c</fullName>
    <label>Agent Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>