force-app/main/default/objects/Lead/fields/Agent_Intake_Form__c.field-meta.xml
<CustomField>
    <fullName>Agent_Intake_Form__c</fullName>
    <description>Field to be used on Intake Form</description>
    <label>Agent (Intake Form)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No preferred LO</fullName>
            </value>
            <value>
                <fullName>Brandon Brotsky</fullName>
            </value>
            <value>
                <fullName>Joseph Olmsted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>