force-app/main/default/objects/Lead/fields/Agent_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Agent_Office_Address__c</fullName>
    <label>Agent Office Address</label>
    <type>TextArea</type>
</CustomField>