force-app/main/default/objects/Lead/fields/Agent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Agent_Phone__c</fullName>
    <label>Agent Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>