force-app/main/default/objects/Lead/fields/Appointment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_Time__c</fullName>
    <label>Appointment Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>