force-app/main/default/objects/Lead/fields/Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time__c</fullName>
    <description>This shows the time of the most recently added event in text format</description>
    <label>Appointment Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>