force-app/main/default/objects/Lead/fields/Appointment_Time_GMT__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time_GMT__c</fullName>
    <description>This shows the time of the most recently added event in GMT time zone.</description>
    <label>Appointment Time GMT</label>
    <type>Time</type>
</CustomField>