force-app/main/default/objects/Lead/fields/Arive_Status__c.field-meta.xml
<CustomField>
    <fullName>Arive_Status__c</fullName>
    <label>Arive Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>