force-app/main/default/objects/Lead/fields/AriveId__c.field-meta.xml
<CustomField>
    <fullName>AriveId__c</fullName>
    <externalId>true</externalId>
    <label>Arive Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>