force-app/main/default/objects/Lead/fields/BDR_New_Webhook_Sent__c.field-meta.xml
<CustomField>
    <fullName>BDR_New_Webhook_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks a Biz Dev - Reach lead after its New-status webhook is delivered to Zapier.</description>
    <label>BDR New Webhook Sent</label>
    <type>Checkbox</type>
</CustomField>