force-app/main/default/objects/Lead/fields/Biz_Dev__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev__c</fullName>
    <label>Biz Dev</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Biz_Dev</valueSetName>
    </valueSet>
</CustomField>