force-app/main/default/objects/Lead/fields/Buying_Agent_has_Changed__c.field-meta.xml
<CustomField>
    <fullName>Buying_Agent_has_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buying Agent has Changed</label>
    <type>Checkbox</type>
</CustomField>