force-app/main/default/objects/Lead/fields/Buying_Agent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Buying_Agent_Phone__c</fullName>
    <formula>Realtor_Buying_Agent__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buying Agent Phone</label>
    <type>Text</type>
</CustomField>