force-app/main/default/objects/Lead/fields/CommSent_Attempt_1__c.field-meta.xml
<CustomField>
    <fullName>CommSent_Attempt_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommSent Attempt 1</label>
    <type>Checkbox</type>
</CustomField>