force-app/main/default/objects/Lead/fields/CommSent_Attempt_2__c.field-meta.xml
<CustomField>
    <fullName>CommSent_Attempt_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommSent Attempt 2</label>
    <type>Checkbox</type>
</CustomField>