force-app/main/default/objects/Lead/fields/CommSent_Attempt_3__c.field-meta.xml
<CustomField>
    <fullName>CommSent_Attempt_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommSent Attempt 3</label>
    <type>Checkbox</type>
</CustomField>