force-app/main/default/objects/Lead/fields/CommSent_Contacted_Call_Back__c.field-meta.xml
<CustomField>
    <fullName>CommSent_Contacted_Call_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommSent Contacted/Call Back</label>
    <type>Checkbox</type>
</CustomField>