force-app/main/default/objects/Lead/fields/CommSent_Docs_Requested__c.field-meta.xml
<CustomField>
    <fullName>CommSent_Docs_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommSent Docs Requested</label>
    <type>Checkbox</type>
</CustomField>