force-app/main/default/objects/Lead/fields/CommSent_Pre_Approval__c.field-meta.xml
<CustomField>
    <fullName>CommSent_Pre_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommSent Pre-Approval</label>
    <type>Checkbox</type>
</CustomField>