force-app/main/default/objects/Lead/fields/CommSent_Working__c.field-meta.xml
<CustomField>
    <fullName>CommSent_Working__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommSent Working</label>
    <type>Checkbox</type>
</CustomField>