force-app/main/default/objects/Lead/fields/Consumer_Webinar_Contacted_Webhook_Sent__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Webinar_Contacted_Webhook_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks a Consumer Webinar lead after its first contacted-status webhook is delivered to Zapier.</description>
    <label>Consumer Webinar Contacted Webhook Sent</label>
    <type>Checkbox</type>
</CustomField>