force-app/main/default/objects/Lead/fields/Contacted_Call_Back_Message__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Call_Back_Message__c</fullName>
    <label>Contacted/Call Back Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>