force-app/main/default/objects/Lead/fields/Contacted_Campaign_Day_11__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Campaign_Day_11__c</fullName>
    <label>Contacted Campaign Day 11</label>
    <type>DateTime</type>
</CustomField>