force-app/main/default/objects/Lead/fields/Contacted_Campaign_Day_15__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Campaign_Day_15__c</fullName>
    <label>Contacted Campaign Day 15</label>
    <type>DateTime</type>
</CustomField>