force-app/main/default/objects/Lead/fields/Contacted_Campaign_Day_17__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Campaign_Day_17__c</fullName>
    <label>Contacted Campaign Day 17</label>
    <type>DateTime</type>
</CustomField>