force-app/main/default/objects/Lead/fields/Contingencies__c.field-meta.xml
<CustomField>
    <fullName>Contingencies__c</fullName>
    <label>Contingencies</label>
    <length>12500</length>
    <type>LongTextArea</type>
</CustomField>