force-app/main/default/objects/Lead/fields/Converted_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Converted_Transaction_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Transaction ID</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>