force-app/main/default/objects/Lead/fields/County_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>County_of_Operation__c</fullName>
    <label>County of Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alachua</fullName>
            </value>
            <value>
                <fullName>Baker</fullName>
            </value>
            <value>
                <fullName>Bay</fullName>
            </value>
            <value>
                <fullName>Bradford</fullName>
            </value>
            <value>
                <fullName>Brevard</fullName>
            </value>
            <value>
                <fullName>Broward</fullName>
            </value>
            <value>
                <fullName>Calhoun</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Citrus</fullName>
            </value>
            <value>
                <fullName>Clay</fullName>
            </value>
            <value>
                <fullName>Collier</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
            <value>
                <fullName>DeSoto</fullName>
            </value>
            <value>
                <fullName>Dixie</fullName>
            </value>
            <value>
                <fullName>Duval</fullName>
            </value>
            <value>
                <fullName>Escambia</fullName>
            </value>
            <value>
                <fullName>Flagler</fullName>
            </value>
            <value>
                <fullName>Franklin</fullName>
            </value>
            <value>
                <fullName>Gadsden</fullName>
            </value>
            <value>
                <fullName>Gilchrist</fullName>
            </value>
            <value>
                <fullName>Glades</fullName>
            </value>
            <value>
                <fullName>Gulf</fullName>
            </value>
            <value>
                <fullName>Hamilton</fullName>
            </value>
            <value>
                <fullName>Hardee</fullName>
            </value>
            <value>
                <fullName>Hendry</fullName>
            </value>
            <value>
                <fullName>Hernando</fullName>
            </value>
            <value>
                <fullName>Highlands</fullName>
            </value>
            <value>
                <fullName>Hillsborough</fullName>
            </value>
            <value>
                <fullName>Holmes</fullName>
            </value>
            <value>
                <fullName>Indian River</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>