force-app/main/default/objects/Lead/fields/Credit_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Expiration_Date__c</fullName>
    <label>Credit Expiration Date</label>
    <type>Date</type>
</CustomField>