force-app/main/default/objects/Lead/fields/Credit_Import_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Import_Date__c</fullName>
    <label>Credit Import Date</label>
    <type>Date</type>
</CustomField>