force-app/main/default/objects/Lead/fields/Credit_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Order_Date__c</fullName>
    <label>Credit Order Date</label>
    <type>Date</type>
</CustomField>