force-app/main/default/objects/Lead/fields/Credit_Repair_Company__c.field-meta.xml
<CustomField>
    <fullName>Credit_Repair_Company__c</fullName>
    <label>Credit Repair Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>