force-app/main/default/objects/Lead/fields/CW_Docs_Req_Webhook_Sent__c.field-meta.xml
<CustomField>
    <fullName>CW_Docs_Req_Webhook_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks a Consumer Webinar lead after its first Documents Requested webhook is delivered to Zapier.</description>
    <label>CW Docs Requested Webhook Sent</label>
    <type>Checkbox</type>
</CustomField>