force-app/main/default/objects/Lead/fields/Day_14_Campaign_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_14_Campaign_Date__c</fullName>
    <label>Day 14 Campaign Date</label>
    <type>DateTime</type>
</CustomField>