force-app/main/default/objects/Lead/fields/Day_21_Campaign_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_21_Campaign_Date__c</fullName>
    <label>Day 21 Campaign Date</label>
    <type>DateTime</type>
</CustomField>