force-app/main/default/objects/Lead/fields/Day_23_Campaign_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_23_Campaign_Date__c</fullName>
    <label>Day 23 Campaign Date</label>
    <type>DateTime</type>
</CustomField>