force-app/main/default/objects/Lead/fields/Days_Since_Initial_Contact_To_PreApprov__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Initial_Contact_To_PreApprov__c</fullName>
    <formula>Pre_Approval_Date__c - Initial_Contact_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Initial Contact To PreApprov</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>