force-app/main/default/objects/Lead/fields/Docs_Requested__c.field-meta.xml
<CustomField>
    <fullName>Docs_Requested__c</fullName>
    <formula>IF(ISBLANK(Docs_Requested_Date__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docs Requested?</label>
    <type>Checkbox</type>
</CustomField>