force-app/main/default/objects/Lead/fields/Docs_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Docs_Requested_Date__c</fullName>
    <label>Docs Requested Date</label>
    <type>Date</type>
</CustomField>