force-app/main/default/objects/Lead/fields/Documents_Received_Message__c.field-meta.xml
<CustomField>
    <fullName>Documents_Received_Message__c</fullName>
    <label>Documents Received Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>