force-app/main/default/objects/Lead/fields/Documents_Requested_Message__c.field-meta.xml
<CustomField>
    <fullName>Documents_Requested_Message__c</fullName>
    <label>Documents Requested Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>