force-app/main/default/objects/Lead/fields/Down_Payment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_Percentage__c</fullName>
    <label>Down Payment Percentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>