force-app/main/default/objects/Lead/fields/Estimated_Cash_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cash_to_Close__c</fullName>
    <label>Estimated Cash to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>