force-app/main/default/objects/Lead/fields/Estimated_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Payment__c</fullName>
    <label>Estimated Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>