force-app/main/default/objects/Lead/fields/First_Contact_DateTime__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_DateTime__c</fullName>
    <label>First Contact DateTime</label>
    <type>DateTime</type>
</CustomField>