force-app/main/default/objects/Lead/fields/First_UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>First_UTM_Campaign__c</fullName>
    <label>First UTM Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>