force-app/main/default/objects/Lead/fields/First_UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>First_UTM_Source__c</fullName>
    <label>First UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>