force-app/main/default/objects/Lead/fields/First_UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>First_UTM_Term__c</fullName>
    <label>First UTM Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>