force-app/main/default/objects/Lead/fields/Follow_Up_Account__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Follow Up Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Follow Up Account)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>