force-app/main/default/objects/Lead/fields/For_Deletion__c.field-meta.xml
<CustomField>
    <fullName>For_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Deletion</label>
    <type>Checkbox</type>
</CustomField>