force-app/main/default/objects/Lead/fields/Gift_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Gift_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this checkbox field is checked, the client is opted into the gift program.</description>
    <label>Gift Opt In</label>
    <type>Checkbox</type>
</CustomField>