force-app/main/default/objects/Lead/fields/Go_Fish__c.field-meta.xml
<CustomField>
    <fullName>Go_Fish__c</fullName>
    <formula>HYPERLINK(&quot;/flow/SharkTank?leadId=&quot;&amp; Id &amp;&quot;&amp;retURL=&quot;&amp; Id, IMAGE(&apos;/resource/1655170069000/Shark&apos;, &quot;Shark&quot;,128.32,75),&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Go Fish!</label>
    <type>Text</type>
</CustomField>