force-app/main/default/objects/Lead/fields/HOA__c.field-meta.xml
<CustomField>
    <fullName>HOA__c</fullName>
    <label>HOA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>