force-app/main/default/objects/Lead/fields/Hyros_Ad_ID__c.field-meta.xml
<CustomField>
    <fullName>Hyros_Ad_ID__c</fullName>
    <label>Hyros Ad ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>