force-app/main/default/objects/Lead/fields/Import_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Import_Identifier__c</fullName>
    <label>Import Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>