force-app/main/default/objects/Lead/fields/In_Person_Preapproval__c.field-meta.xml
<CustomField>
    <fullName>In_Person_Preapproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-Person Preapproval</label>
    <type>Checkbox</type>
</CustomField>