force-app/main/default/objects/Lead/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <label>Landing Page</label>
    <type>Url</type>
</CustomField>