force-app/main/default/objects/Lead/fields/Last_Call_Attempt_RingCentral__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Attempt_RingCentral__c</fullName>
    <label>Last Call Attempt (RingCentral)</label>
    <type>DateTime</type>
</CustomField>