force-app/main/default/objects/Lead/fields/Last_Call_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_DateTime__c</fullName>
    <label>Last Call Date/Time</label>
    <type>DateTime</type>
</CustomField>