force-app/main/default/objects/Lead/fields/Last_Call_Day_Ago__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Day_Ago__c</fullName>
    <formula>IF (NOW() - 1 &gt;= Last_Call_DateTime__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Call Day Ago</label>
    <type>Checkbox</type>
</CustomField>