force-app/main/default/objects/Lead/fields/Last_Note__c.field-meta.xml
<CustomField>
    <fullName>Last_Note__c</fullName>
    <label>Last Note</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>