force-app/main/default/objects/Lead/fields/Last_SMS_Attempt_RingCentral__c.field-meta.xml
<CustomField>
    <fullName>Last_SMS_Attempt_RingCentral__c</fullName>
    <label>Last SMS Attempt (RingCentral)</label>
    <type>DateTime</type>
</CustomField>