force-app/main/default/objects/Lead/fields/Last_UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>Last_UTM_Content__c</fullName>
    <label>Last UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>