force-app/main/default/objects/Lead/fields/Lead_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Lead_Claimed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Claimed</label>
    <type>Checkbox</type>
</CustomField>