force-app/main/default/objects/Lead/fields/Lead_Notes_JSON__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notes_JSON__c</fullName>
    <label>Lead Notes JSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>