force-app/main/default/objects/Lead/fields/Lead_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Name__c</fullName>
    <formula>Owner:User.FirstName &amp; &quot; &quot;&amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Name</label>
    <type>Text</type>
</CustomField>