force-app/main/default/objects/Lead/fields/Lead_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Phone__c</fullName>
    <formula>Owner:User.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Phone #</label>
    <type>Text</type>
</CustomField>