force-app/main/default/objects/Lead/fields/Lead_Portal_Link_As_URL__c.field-meta.xml
<CustomField>
    <fullName>Lead_Portal_Link_As_URL__c</fullName>
    <formula>IF(
    OR(
        ISBLANK($Setup.BorrowerPortalSettings__c.Lead_Borrower_Home_Url__c),
        ISBLANK(Portal_Hash_Parameter__c)
    ),
    &quot;&quot;,
    SUBSTITUTE(
        IF(
            RIGHT($Setup.BorrowerPortalSettings__c.Lead_Borrower_Home_Url__c, 1) = &quot;/&quot;,
            LEFT(
                $Setup.BorrowerPortalSettings__c.Lead_Borrower_Home_Url__c,
                LEN($Setup.BorrowerPortalSettings__c.Lead_Borrower_Home_Url__c) - 1
            ),
            $Setup.BorrowerPortalSettings__c.Lead_Borrower_Home_Url__c
        ),
        &quot;/s&quot;,
        &quot;/apex/LeadBorrowerDocumentPortal&quot;
    ) &amp; &quot;?id=&quot; &amp; Portal_Hash_Parameter__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Portal Link As URL</label>
    <type>Text</type>
</CustomField>