force-app/main/default/objects/Lead/fields/Lead_Responded_to_Text__c.field-meta.xml
<CustomField>
    <fullName>Lead_Responded_to_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Responded to Text</label>
    <type>Checkbox</type>
</CustomField>