force-app/main/default/objects/Lead/fields/Lead_Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Value__c</fullName>
    <formula>CASE(Status, &apos;Contact Attempt 1&apos;,1, &apos;Contact Attempt 2&apos;, 2,&apos;Contact Attempt 3&apos;, 3,&apos;Contact Attempt 4&apos;,4,&apos;Contact Attempt 5&apos;,5,&apos;Contact Attempt 6&apos;,6,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Status Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>