force-app/main/default/objects/Lead/fields/Letter_Completed__c.field-meta.xml
<CustomField>
    <fullName>Letter_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter Completed</label>
    <type>Checkbox</type>
</CustomField>