force-app/main/default/objects/Lead/fields/Linktree_Status_Webhook_Sent__c.field-meta.xml
<CustomField>
    <fullName>Linktree_Status_Webhook_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Linktree Status Webhook Sent</label>
    <type>Checkbox</type>
</CustomField>