force-app/main/default/objects/Lead/fields/Loan_Details__c.field-meta.xml
<CustomField>
    <fullName>Loan_Details__c</fullName>
    <label>Loan Details</label>
    <type>TextArea</type>
</CustomField>