force-app/main/default/objects/Lead/fields/Loan_Partner__c.field-meta.xml
<CustomField>
    <fullName>Loan_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LoanPartnerLeads</relationshipName>
    <type>Lookup</type>
</CustomField>